--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 
 <body>
     <h1>Staci Van Rooy</h1>
-    <p>An introductory personal statement.</p>
+    <p>Digital Designer <a href="https://www.behance.net/stacivanrooy" target="_blank">(View Portfolio)</a> </p>
 
-    <h2>Education</h2>
+    <br>
+
+    <img src="images/profilePic.jpg" alt="Photograph of Staci" width="200">
+
+    <ul>
+        <li> <a href="#education">Education</a> </li>
+        <li> <a href="#experience">Experience</a> </li>
+        <li> <a href="#skills">Skills</a> </li>
+    </ul>
+
+    <h2 id="education">Education</h2>
     <h3>Qualification 1</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ex consequuntur perferendis animi dolore explicabo,
         tenetur alias quos minus blanditiis, fuga, est deserunt eligendi distinctio velit aperiam odio impedit nisi?
@@ -31,7 +41,26 @@
         Placeat, et numquam. Ea ad in impedit ipsum. Saepe, nobis eius perspiciatis beatae dolore provident at optio eos
         dolorum. Non assumenda tenetur reiciendis inventore, suscipit nihil in esse laboriosam dolorum.</p>
 
-    <h2>Experience</h2>
+    <h2 id="experience">Experience</h2>
+    <h3>Job 1</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro reiciendis quae.
+        Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
+        Ad esse eos voluptatibus quasi consequuntur deleniti nesciunt error, magnam quisquam est quos obcaecati dolorem
+        illum iste ut fugiat! Quidem dolor repellendus eaque enim! Inventore mollitia impedit et odio deserunt.
+        Dolores quis quo perferendis nostrum aliquid, molestias quasi nam ullam vero corporis provident corrupti quas
+        ducimus rerum sequi. Neque rem obcaecati quasi nesciunt vel numquam repellat exercitationem molestias, ea natus.
+    </p>
+    <h3>Job 2</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil error minus esse culpa, quaerat eos laudantium.
+        Enim expedita, tempore doloribus id aut laudantium iste unde ab excepturi officia quam nobis.
+        Vitae sequi doloribus, corrupti rerum repudiandae vero laudantium iste adipisci culpa aut earum velit. Dolores
+        earum reprehenderit odio corrupti repellat, rerum atque consequuntur sunt quasi possimus facilis, beatae velit
+        aliquid.
+        Quae animi praesentium quia, est quo doloribus. Error officiis itaque ut ducimus quasi dolores aliquid magni
+        officia, at quisquam repudiandae cum eum consequuntur architecto voluptatem quidem, magnam qui voluptatibus
+        libero?</p>
+
+    <h2 id="skills">Skills</h2>
     <h3>Job 1</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro reiciendis quae.
         Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
