--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staci Van Rooy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,200;0,300;0,500;1,200;1,300;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 
@@ -26,92 +31,121 @@
             </ul>
         </aside>
         <article>
-            <h2 id="education">Education</h2>
-            <h3>Qualification 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ex consequuntur perferendis animi dolore
-                explicabo,
-                tenetur alias quos minus blanditiis, fuga, est deserunt eligendi distinctio velit aperiam odio impedit
-                nisi?
-                Totam, eum eligendi et optio consectetur dolorem atque delectus. Minima ipsa delectus quaerat commodi
-                temporibus
-                excepturi. Perspiciatis distinctio, libero possimus cum reiciendis quidem numquam, ipsa, ab blanditiis
-                provident
-                aliquid delectus!
-                Mollitia nam quis magnam deleniti autem. Quia laudantium fugiat adipisci odio accusamus, quidem facilis
-                aut
-                soluta eveniet reprehenderit, laborum at obcaecati error nesciunt commodi quo minima sed inventore
-                ducimus
-                illum.</p>
-            <h3>Qualification 2</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nemo, consequatur optio ad quia
-                inventore
-                magni veritatis quam culpa veniam, atque adipisci dolores asperiores itaque, unde mollitia perspiciatis
-                alias
-                dicta?
-                Voluptas cumque optio alias omnis expedita ipsa dolor porro dolorum, distinctio quia quasi. Perferendis
-                sed
-                ratione, porro inventore molestias praesentium quae, illum et voluptatibus harum illo, quasi enim
-                obcaecati
-                ducimus.
-                Placeat, et numquam. Ea ad in impedit ipsum. Saepe, nobis eius perspiciatis beatae dolore provident at
-                optio eos
-                dolorum. Non assumenda tenetur reiciendis inventore, suscipit nihil in esse laboriosam dolorum.</p>
+            <div class="info">
+                <h2 id="education">Education</h2>
+                <h3>Qualification 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ex consequuntur perferendis animi dolore
+                    explicabo,
+                    tenetur alias quos minus blanditiis, fuga, est deserunt eligendi distinctio velit aperiam odio
+                    impedit
+                    nisi?
+                    Totam, eum eligendi et optio consectetur dolorem atque delectus. Minima ipsa delectus quaerat
+                    commodi
+                    temporibus
+                    excepturi. Perspiciatis distinctio, libero possimus cum reiciendis quidem numquam, ipsa, ab
+                    blanditiis
+                    provident
+                    aliquid delectus!
+                    Mollitia nam quis magnam deleniti autem. Quia laudantium fugiat adipisci odio accusamus, quidem
+                    facilis
+                    aut
+                    soluta eveniet reprehenderit, laborum at obcaecati error nesciunt commodi quo minima sed inventore
+                    ducimus
+                    illum.</p>
+                <h3>Qualification 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nemo, consequatur optio ad quia
+                    inventore
+                    magni veritatis quam culpa veniam, atque adipisci dolores asperiores itaque, unde mollitia
+                    perspiciatis
+                    alias
+                    dicta?
+                    Voluptas cumque optio alias omnis expedita ipsa dolor porro dolorum, distinctio quia quasi.
+                    Perferendis
+                    sed
+                    ratione, porro inventore molestias praesentium quae, illum et voluptatibus harum illo, quasi enim
+                    obcaecati
+                    ducimus.
+                    Placeat, et numquam. Ea ad in impedit ipsum. Saepe, nobis eius perspiciatis beatae dolore provident
+                    at
+                    optio eos
+                    dolorum. Non assumenda tenetur reiciendis inventore, suscipit nihil in esse laboriosam dolorum.</p>
+            </div>
 
-            <h2 id="experience">Experience</h2>
-            <h3>Job 1</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro reiciendis
-                quae.
-                Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
-                Ad esse eos voluptatibus quasi consequuntur deleniti nesciunt error, magnam quisquam est quos obcaecati
-                dolorem
-                illum iste ut fugiat! Quidem dolor repellendus eaque enim! Inventore mollitia impedit et odio deserunt.
-                Dolores quis quo perferendis nostrum aliquid, molestias quasi nam ullam vero corporis provident corrupti
-                quas
-                ducimus rerum sequi. Neque rem obcaecati quasi nesciunt vel numquam repellat exercitationem molestias,
-                ea natus.
-            </p>
-            <h3>Job 2</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil error minus esse culpa, quaerat eos
-                laudantium.
-                Enim expedita, tempore doloribus id aut laudantium iste unde ab excepturi officia quam nobis.
-                Vitae sequi doloribus, corrupti rerum repudiandae vero laudantium iste adipisci culpa aut earum velit.
-                Dolores
-                earum reprehenderit odio corrupti repellat, rerum atque consequuntur sunt quasi possimus facilis, beatae
-                velit
-                aliquid.
-                Quae animi praesentium quia, est quo doloribus. Error officiis itaque ut ducimus quasi dolores aliquid
-                magni
-                officia, at quisquam repudiandae cum eum consequuntur architecto voluptatem quidem, magnam qui
-                voluptatibus
-                libero?</p>
+            <div>
+                <h2 id="experience">Experience</h2>
+                <h3>Job 1</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro
+                    reiciendis
+                    quae.
+                    Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
+                    Ad esse eos voluptatibus quasi consequuntur deleniti nesciunt error, magnam quisquam est quos
+                    obcaecati
+                    dolorem
+                    illum iste ut fugiat! Quidem dolor repellendus eaque enim! Inventore mollitia impedit et odio
+                    deserunt.
+                    Dolores quis quo perferendis nostrum aliquid, molestias quasi nam ullam vero corporis provident
+                    corrupti
+                    quas
+                    ducimus rerum sequi. Neque rem obcaecati quasi nesciunt vel numquam repellat exercitationem
+                    molestias,
+                    ea natus.
+                </p>
+                <h3>Job 2</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil error minus esse culpa, quaerat eos
+                    laudantium.
+                    Enim expedita, tempore doloribus id aut laudantium iste unde ab excepturi officia quam nobis.
+                    Vitae sequi doloribus, corrupti rerum repudiandae vero laudantium iste adipisci culpa aut earum
+                    velit.
+                    Dolores
+                    earum reprehenderit odio corrupti repellat, rerum atque consequuntur sunt quasi possimus facilis,
+                    beatae
+                    velit
+                    aliquid.
+                    Quae animi praesentium quia, est quo doloribus. Error officiis itaque ut ducimus quasi dolores
+                    aliquid
+                    magni
+                    officia, at quisquam repudiandae cum eum consequuntur architecto voluptatem quidem, magnam qui
+                    voluptatibus
+                    libero?</p>
+            </div>
 
-            <h2 id="skills">Skills</h2>
-            <h3>Job 1</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro reiciendis
-                quae.
-                Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
-                Ad esse eos voluptatibus quasi consequuntur deleniti nesciunt error, magnam quisquam est quos obcaecati
-                dolorem
-                illum iste ut fugiat! Quidem dolor repellendus eaque enim! Inventore mollitia impedit et odio deserunt.
-                Dolores quis quo perferendis nostrum aliquid, molestias quasi nam ullam vero corporis provident corrupti
-                quas
-                ducimus rerum sequi. Neque rem obcaecati quasi nesciunt vel numquam repellat exercitationem molestias,
-                ea natus.
-            </p>
-            <h3>Job 2</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil error minus esse culpa, quaerat eos
-                laudantium.
-                Enim expedita, tempore doloribus id aut laudantium iste unde ab excepturi officia quam nobis.
-                Vitae sequi doloribus, corrupti rerum repudiandae vero laudantium iste adipisci culpa aut earum velit.
-                Dolores
-                earum reprehenderit odio corrupti repellat, rerum atque consequuntur sunt quasi possimus facilis, beatae
-                velit
-                aliquid.
-                Quae animi praesentium quia, est quo doloribus. Error officiis itaque ut ducimus quasi dolores aliquid
-                magni
-                officia, at quisquam repudiandae cum eum consequuntur architecto voluptatem quidem, magnam qui
-                voluptatibus
-                libero?</p>
+            <div class="info">
+                <h2 id="skills">Skills</h2>
+                <h3>Job 1</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro
+                    reiciendis
+                    quae.
+                    Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
+                    Ad esse eos voluptatibus quasi consequuntur deleniti nesciunt error, magnam quisquam est quos
+                    obcaecati
+                    dolorem
+                    illum iste ut fugiat! Quidem dolor repellendus eaque enim! Inventore mollitia impedit et odio
+                    deserunt.
+                    Dolores quis quo perferendis nostrum aliquid, molestias quasi nam ullam vero corporis provident
+                    corrupti
+                    quas
+                    ducimus rerum sequi. Neque rem obcaecati quasi nesciunt vel numquam repellat exercitationem
+                    molestias,
+                    ea natus.
+                </p>
+                <h3>Job 2</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil error minus esse culpa, quaerat eos
+                    laudantium.
+                    Enim expedita, tempore doloribus id aut laudantium iste unde ab excepturi officia quam nobis.
+                    Vitae sequi doloribus, corrupti rerum repudiandae vero laudantium iste adipisci culpa aut earum
+                    velit.
+                    Dolores
+                    earum reprehenderit odio corrupti repellat, rerum atque consequuntur sunt quasi possimus facilis,
+                    beatae
+                    velit
+                    aliquid.
+                    Quae animi praesentium quia, est quo doloribus. Error officiis itaque ut ducimus quasi dolores
+                    aliquid
+                    magni
+                    officia, at quisquam repudiandae cum eum consequuntur architecto voluptatem quidem, magnam qui
+                    voluptatibus
+                    libero?</p>
+            </div>
         </article>
     </section>
     <footer>
