--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <title>Staci Van Rooy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,200;0,300;0,500;1,200;1,300;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;1,300&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Elsie:wght@900&family=Josefin+Sans:ital,wght@0,300;0,500;1,300&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 
 <body>
     <header>
-        <h1>Staci Van Rooy</h1>
-        <p>Digital Designer <a href="https://www.behance.net/stacivanrooy" target="_blank">(View Portfolio)</a> </p>
-        <img src="images/profilePic.jpg" alt="Photograph of Staci" width="200">
+        <h1>STACI VAN ROOY</h1>
+        <p>Digital Designer</p>
+        <img src="images/profilePic.jpg" alt="Photograph of Staci">
     </header>
 
 
@@ -28,6 +31,7 @@
                 <li> <a href="#education">Education</a> </li>
                 <li> <a href="#experience">Experience</a> </li>
                 <li> <a href="#skills">Skills</a> </li>
+                <li> <a href="https://www.behance.net/stacivanrooy" target="_blank"> Portfolio</a> </li>
             </ul>
         </aside>
         <article>
