--- a/index.html
+++ b/index.html
@@ -7,154 +7,120 @@
     <title>Staci Van Rooy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Elsie:wght@900&family=Josefin+Sans:ital,wght@0,300;0,500;1,300&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Playfair+Display:ital,wght@0,400;0,800;1,400;1,600;1,800&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 
 <body>
     <header>
-        <h1>STACI VAN ROOY</h1>
-        <p>Digital Designer</p>
-        <img src="images/profilePic.jpg" alt="Photograph of Staci">
+        <Nav id="backToTop">
+            <ul id="Menu">
+                <li> <a class="NavOption" href="#education">Education</a> </li>
+                <li> <a class="NavOption" href="#experience">Experience</a> </li>
+                <li> <a class="NavOption" href="#skills">Skills</a> </li>
+                <li> <a class="NavOption" href="#contact"> Contact</a>
+                </li>
+            </ul>
+        </Nav>
+
+        <h1>Staci Van Rooy</h1>
+        <p id="slogan">Art Direction & Design</p>
     </header>
 
 
-    <section>
-        <aside>
 
-            <ul>
-                <li> <a href="#education">Education</a> </li>
-                <li> <a href="#experience">Experience</a> </li>
-                <li> <a href="#skills">Skills</a> </li>
-                <li> <a href="https://www.behance.net/stacivanrooy" target="_blank"> Portfolio</a> </li>
-            </ul>
-        </aside>
+    <section id="main">
+
+        <div id="profile">
+            <img src="images/profilePic.jpg" alt="Photograph of Staci">
+            <h2>About Me</h2>
+            <p>Hardworking, dedicated and self motivated individual who always strives for the best. I enjoy being able
+                to
+                be creative and believe fashion and design are universally recognized forms of expression and I love
+                being
+                able to communicate through these mediums. Through my experience as a designer, I have developed a
+                very unique and versatile skill set which I am constantly building on to and improving.
+                When not working on my career, I enjoy created DIY/craft projects, spending time with friends and family
+                and browsing through social media to catch up on the feeds of my favourite local influencers.</p>
+        </div>
+
         <article>
             <div class="info">
                 <h2 id="education">Education</h2>
-                <h3>Qualification 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ex consequuntur perferendis animi dolore
-                    explicabo,
-                    tenetur alias quos minus blanditiis, fuga, est deserunt eligendi distinctio velit aperiam odio
-                    impedit
-                    nisi?
-                    Totam, eum eligendi et optio consectetur dolorem atque delectus. Minima ipsa delectus quaerat
-                    commodi
-                    temporibus
-                    excepturi. Perspiciatis distinctio, libero possimus cum reiciendis quidem numquam, ipsa, ab
-                    blanditiis
-                    provident
-                    aliquid delectus!
-                    Mollitia nam quis magnam deleniti autem. Quia laudantium fugiat adipisci odio accusamus, quidem
-                    facilis
-                    aut
-                    soluta eveniet reprehenderit, laborum at obcaecati error nesciunt commodi quo minima sed inventore
-                    ducimus
-                    illum.</p>
-                <h3>Qualification 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nemo, consequatur optio ad quia
-                    inventore
-                    magni veritatis quam culpa veniam, atque adipisci dolores asperiores itaque, unde mollitia
-                    perspiciatis
-                    alias
-                    dicta?
-                    Voluptas cumque optio alias omnis expedita ipsa dolor porro dolorum, distinctio quia quasi.
-                    Perferendis
-                    sed
-                    ratione, porro inventore molestias praesentium quae, illum et voluptatibus harum illo, quasi enim
-                    obcaecati
-                    ducimus.
-                    Placeat, et numquam. Ea ad in impedit ipsum. Saepe, nobis eius perspiciatis beatae dolore provident
-                    at
-                    optio eos
-                    dolorum. Non assumenda tenetur reiciendis inventore, suscipit nihil in esse laboriosam dolorum.</p>
+                <h3>Advanced Diploma in fashion design</h3>
+                <p>2013 - 2014 • Cape Town College of Fashion Design</p>
+
+                <h3>Diploma in fashion design & International
+                    Diploma from City & Guilds</h3>
+                <p>2010 - 2012 • Cape Town College of Fashion Design</p>
+
+                <h3>Matriculated with merit & subject distinctions</h3>
+                <p>2004 - 2009 • South Peninsula High</p>
+
+                <h3>Additional Short Courses</h3>
+                <ul>
+                    <li>Adobe Illustrator CC – Essentials Training - By Daniel Scott</li>
+                    <li>Adobe Photoshop CC – Essentials & Advanced Training - By Daniel Scott </li>
+                    <li>Adobe Indesign CC – Essentials & Advanced Training - By Daniel Scott</li>
+                    <li>User Experience Design Essentials - Adobe XD UI UX Design - By Daniel Scott</li>
+                    <li>The Branding Masterclass for Graphic Design - By Lindsay Marsh</li>
+                </ul>
             </div>
 
-            <div>
+            <div class="info">
                 <h2 id="experience">Experience</h2>
-                <h3>Job 1</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro
-                    reiciendis
-                    quae.
-                    Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
-                    Ad esse eos voluptatibus quasi consequuntur deleniti nesciunt error, magnam quisquam est quos
-                    obcaecati
-                    dolorem
-                    illum iste ut fugiat! Quidem dolor repellendus eaque enim! Inventore mollitia impedit et odio
-                    deserunt.
-                    Dolores quis quo perferendis nostrum aliquid, molestias quasi nam ullam vero corporis provident
-                    corrupti
-                    quas
-                    ducimus rerum sequi. Neque rem obcaecati quasi nesciunt vel numquam repellat exercitationem
-                    molestias,
-                    ea natus.
+                <h3>Freelance Designer </h3>
+                <p>
+                    These services include Trend research/analysis & moodboard
+                    compilation, CAD Design, Surface/Textile design, Logo & packaging design, Graphic
+                    design services (digital and print), Sourcing garments for photoshoots & On set fashion
+                    styling
                 </p>
-                <h3>Job 2</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil error minus esse culpa, quaerat eos
-                    laudantium.
-                    Enim expedita, tempore doloribus id aut laudantium iste unde ab excepturi officia quam nobis.
-                    Vitae sequi doloribus, corrupti rerum repudiandae vero laudantium iste adipisci culpa aut earum
-                    velit.
-                    Dolores
-                    earum reprehenderit odio corrupti repellat, rerum atque consequuntur sunt quasi possimus facilis,
-                    beatae
-                    velit
-                    aliquid.
-                    Quae animi praesentium quia, est quo doloribus. Error officiis itaque ut ducimus quasi dolores
-                    aliquid
-                    magni
-                    officia, at quisquam repudiandae cum eum consequuntur architecto voluptatem quidem, magnam qui
-                    voluptatibus
-                    libero?</p>
+
+                <h3>Designer/Graphic Artist - Sino Textile Trade</h3>
+                <p> My main responsibilities include designing sleepwear and blanket ranges for all age
+                    groups as well as ladies and girls outerwear. This consists of conducting trend
+                    research, designing repeat & placement prints for fabric printing, creating CADs & tech
+                    packs, creating & editing logos, labels and packaging for print.
+                    Other duties include assisting the managing director with various buyer portfolios,
+                    creating moodboards, assisting with photoshoot prep, attending fittings, managing
+                    supplier communications, creating social media posts for the companies x2 local
+                    clothing brands and some additional adhoc duties as needed.
+                </p>
+
+                <h3>Product Owner - Yesja (Easiba)</h3>
+                <p> I was hired as part a the team to service Yesja, an online fashion project for local
+                    businesses. My main responsibility was to proxy customer and client requirements
+                    regarding their user experience on and usability of the platform. This included creating
+                    and communicating visual requirements to the development team, contributing toward
+                    the social media strategy by planning and creating content, reviewing clients product
+                    ranges and providing feedback on fashion trends, customer buying trends and sales
+                    performance.
+                </p>
             </div>
 
             <div class="info">
                 <h2 id="skills">Skills</h2>
-                <h3>Job 1</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptatem nisi impedit, porro
-                    reiciendis
-                    quae.
-                    Quis nulla amet nisi quod, ipsum illo eaque omnis eligendi sint illum quo est voluptatum?
-                    Ad esse eos voluptatibus quasi consequuntur deleniti nesciunt error, magnam quisquam est quos
-                    obcaecati
-                    dolorem
-                    illum iste ut fugiat! Quidem dolor repellendus eaque enim! Inventore mollitia impedit et odio
-                    deserunt.
-                    Dolores quis quo perferendis nostrum aliquid, molestias quasi nam ullam vero corporis provident
-                    corrupti
-                    quas
-                    ducimus rerum sequi. Neque rem obcaecati quasi nesciunt vel numquam repellat exercitationem
-                    molestias,
-                    ea natus.
+                <h3>Technical: </h3>
+                <p> Adobe Suite (photoshop/illustrator/indesign/xd) - Corel Draw - Microsoft
+                    Office & Outlook - Canva - Figma - Garment Construction & Patternmaking -
+                    Makeup Application - Excellent research & analysis ability
                 </p>
-                <h3>Job 2</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil error minus esse culpa, quaerat eos
-                    laudantium.
-                    Enim expedita, tempore doloribus id aut laudantium iste unde ab excepturi officia quam nobis.
-                    Vitae sequi doloribus, corrupti rerum repudiandae vero laudantium iste adipisci culpa aut earum
-                    velit.
-                    Dolores
-                    earum reprehenderit odio corrupti repellat, rerum atque consequuntur sunt quasi possimus facilis,
-                    beatae
-                    velit
-                    aliquid.
-                    Quae animi praesentium quia, est quo doloribus. Error officiis itaque ut ducimus quasi dolores
-                    aliquid
-                    magni
-                    officia, at quisquam repudiandae cum eum consequuntur architecto voluptatem quidem, magnam qui
-                    voluptatibus
-                    libero?</p>
+
+                <h3>Soft:</h3>
+                <p>Creative Thinker - Problem Solver - Works well under Pressure - Takes Initiative
+                    - Takes Direction well - Great Visual Eye/Understanding - Versatile & Adaptable
+                </p>
             </div>
         </article>
     </section>
+
     <footer>
-        <p>Contact Details:</p>
+        <h3 id="contact">Contact Details:</h3>
         <p>Cel: 000 000 0000 Email: stacivanrooy@gmail.com</p>
+        <a href="#backToTop">Back to top</a>
     </footer>
 
 </body>
