Updates for 1st attempt submission
Added additional changes throughout to ensure resume meets criteria.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <header>
         <Nav id="backToTop">
             <ul id="Menu">
@@ -29,9 +30,7 @@
         <p id="slogan">Art Direction & Design</p>
     </header>
 
-
-
-    <section id="main">
+    <main id="main">
 
         <div id="profile">
             <img src="images/profilePic.jpg" alt="Photograph of Staci">
@@ -44,6 +43,17 @@
                 very unique and versatile skill set which I am constantly building on to and improving.
                 When not working on my career, I enjoy created DIY/craft projects, spending time with friends and family
                 and browsing through social media to catch up on the feeds of my favourite local influencers.</p>
+
+            <h2>Interests</h2>
+            <ul>
+                <li>Fashion</li>
+                <li>Visual Design</li>
+                <li>Health & Fitness</li>
+                <li>Adventure Activities</li>
+                <li>Spending Time with Family & Friends</li>
+                <li>Arts & Crafts</li>
+                <li>Social Media Marketing</li>
+            </ul>
         </div>
 
         <article>
@@ -103,24 +113,66 @@
 
             <div class="info">
                 <h2 id="skills">Skills</h2>
-                <h3>Technical: </h3>
-                <p> Adobe Suite (photoshop/illustrator/indesign/xd) - Corel Draw - Microsoft
-                    Office & Outlook - Canva - Figma - Garment Construction & Patternmaking -
-                    Makeup Application - Excellent research & analysis ability
-                </p>
+                <div class="skillsSection">
+                    <div>
+                        <h3>Technical: </h3>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>Adobe Photshop</li>
+                            <li>Adobe Illustrator</li>
+                            <li>Adobe Indesign</li>
+                            <li>Adobe XD</li>
+                            <li>Figma</li>
+                            <li>Corel Draw</li>
+                            <li>Microsoft Office</li>
+                            <li>Garment Construction</li>
+                            <li>Pattern Making</li>
+                            <li>Makeup Application</li>
+                        </ul>
+                    </div>
 
-                <h3>Soft:</h3>
-                <p>Creative Thinker - Problem Solver - Works well under Pressure - Takes Initiative
-                    - Takes Direction well - Great Visual Eye/Understanding - Versatile & Adaptable
-                </p>
+                    <div>
+                        <h3>Soft:</h3>
+                        <ul>
+                            <li>Creative & Conceptual Thinker</li>
+                            <li>Problem Solver</li>
+                            <li>Works Well Under Pressure</li>
+                            <li>Takes Initiative</li>
+                            <li>Gives & Takes Direction Well</li>
+                            <li>Great Visual Eye & Visual Understanding</li>
+                            <li>Versatile & Adaptable</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
+
         </article>
-    </section>
+    </main>
 
     <footer>
-        <h3 id="contact">Contact Details:</h3>
-        <p>Cel: 000 000 0000 Email: stacivanrooy@gmail.com</p>
-        <a href="#backToTop">Back to top</a>
+        <h2 id="contact">Contact Details:</h2>
+
+        <a href="https://www.behance.net/stacivanrooy" target="_blank">
+            <img src="images/behanceIcon.png" alt="Behance Portfolio" class="contactIcon">
+        </a>
+
+        <a href="https://www.linkedin.com/in/staci-van-rooy/" target="_blank">
+            <img src="images/linkedinIcon.png" alt="LinkedIn Profile" class="contactIcon">
+        </a>
+
+        <a href="https://www.instagram.com/staci_vr/" target="_blank">
+            <img src="images/instagramIcon.png" alt="Instagram Profile" class="contactIcon">
+        </a>
+
+        <a href="mailto:stacivanrooy@gmail.com" target="_blank">
+            <img src="images/emailIcon.png" alt="Email Me" class="contactIcon">
+        </a>
+
+        <p>
+            <a href="#backToTop" id="bottomLink">Back to Top</a>
+        </p>
+
     </footer>
 
 </body>
