--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
                 <h3>Additional Short Courses</h3>
                 <ul>
+                    <li>Intro To Web - Code Space</li>
                     <li>Adobe Illustrator CC – Essentials Training - By Daniel Scott</li>
                     <li>Adobe Photoshop CC – Essentials & Advanced Training - By Daniel Scott </li>
                     <li>Adobe Indesign CC – Essentials & Advanced Training - By Daniel Scott</li>
