Updates for final Resume 1 submission
Changed the naming to camel case only to address the feedback about the use of both camel and pascal.

Added some comments in the html & css doc to address the feedback about not having any comments initially

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <header>
         <Nav id="backToTop">
-            <ul id="Menu">
-                <li> <a class="NavOption" href="#education">Education</a> </li>
-                <li> <a class="NavOption" href="#experience">Experience</a> </li>
-                <li> <a class="NavOption" href="#skills">Skills</a> </li>
-                <li> <a class="NavOption" href="#contact"> Contact</a>
+            <ul id="menu">
+                <li> <a class="navOption" href="#education">Education</a> </li>
+                <li> <a class="navOption" href="#experience">Experience</a> </li>
+                <li> <a class="navOption" href="#skills">Skills</a> </li>
+                <li> <a class="navOption" href="#contact"> Contact</a>
                 </li>
             </ul>
         </Nav>
